# api-rs

./: Cargo.toml  Dockerfile  README.md  server
.cargo/: config.toml
assets/css/: index.css  style.css  theme-common.css  theme-material.css  theme-neomorphism.css
data/: accounts.json
src/: cli.rs  error.rs  main.rs  middleware.rs  prelude.rs  router.rs  security.rs  state.rs
src/repositories/: account_file.rs  mod.rs
src/routes/: home.rs  index.rs  mod.rs  sign_in.rs
src/security/: password.rs  token.rs
src/services/: mod.rs
src/services/authentication/: entities.rs  repositories.rs  service.rs
src/services/processing/: mod.rs  tasks.rs  tests.rs  workflows.rs
templates/: home.html  index.html  sign_in.html
testdata/: test_tasks_accounts.json
