[package]
name = "api-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
askama = "0.12.1"
async-trait = "0.1.81"
axum = "0.7.5"
mockall = "0.13.0"
rand = "0.8.5"
rusty_paseto = "0.7.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
